--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
 
 script:
 - docker build --build-arg FPM_VERSION=${FPM_VERSION} -t fg2it/fpm:${FPM_VERSION}${ITERATION} .
+- docker images
 
 deploy:
 - provider: script
